# The-Watch-Project

./: .gitignore  README.md
WatchAppNordic/: ADDITIONAL_FIXES.md  CHANGES_SUMMARY.md  COMPLETION_CHECKLIST.md  DOCUMENTATION_INDEX.md  EXACT_CHANGES.md  IMPLEMENTATION_COMPLETE.md  QUICK_START.md  README_THEME_SYSTEM.txt  TESTING_GUIDE.md  THEME_FIXES.md  settings.gradle.kts
WatchAppNordic/app/: build.gradle.kts
WatchAppNordic/app/release/: output-metadata.json
WatchAppNordic/app/release/baselineProfiles/0/: app-release.dm
WatchAppNordic/app/release/baselineProfiles/1/: app-release.dm
WatchAppNordic/app/src/main/: AndroidManifest.xml
WatchAppNordic/app/src/main/res/layout/: activity_alarm.xml  activity_ir_remote.xml  activity_main.xml  activity_notification_settings.xml  activity_theme_config.xml  dialog_add_ir_button.xml  dialog_edit_alarm.xml  item_alarm.xml  item_app_filter.xml  item_custom_ir_button.xml
WatchAppNordic/app/src/main/res/menu/: alarm_menu.xml
WatchAppNordic/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
WatchAppNordic/app/src/main/res/values-night/: themes.xml
WatchAppNordic/app/src/main/xml/: AndroidManifest.xml
WatchAppNordic/gradle/: libs.versions.toml
WatchAppNordic/gradle/wrapper/: gradle-wrapper.properties
smart_watch/: CMakeLists.txt  sdkconfig  sdkconfig.old
smart_watch/main/: CMakeLists.txt  idf_component.yml  pins.h  smart_watch.c
smart_watch/main/battery/: battery.c  battery.h
smart_watch/main/ble/: ble.c  ble.h
smart_watch/main/clock/: clock.c  clock.h
smart_watch/main/find_phone/: find_phone.c  find_phone.h
smart_watch/main/input_mgr/: buttons.c  buttons.h
smart_watch/main/ir_blaster/: ir_blaster.c  ir_blaster.h
smart_watch/main/notification/: notification.c  notification.h
smart_watch/main/ui/: .eez-project-build  actions.h  fonts.h  images.c  images.h  screens.c  screens.h  ui_font_roboto.c  ui_image_alarm_icon.c  ui_image_battery_icon.c  ui_image_bluetooth_ico.c  ui_image_message_icon.c  vars.c  vars.h
(+12 files in other folders)
